--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "axios": "^1.7.7",
     "leaflet": "^1.9.3",
+    "leaflet-easyprint": "^2.1.9",
+    "leaflet-geosearch": "^4.0.0",
     "leaflet.heat": "^0.2.0",
     "ol": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
+    "react-leaflet-search": "^2.0.1",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
